--- a/src/order.html
+++ b/src/order.html
@@ -56,9 +56,9 @@
 </nav>
 
 	<section class="white parallax_section"></section>
-	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
+	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/hospitaliers_order.jpg"></section>
 	<section class="white parallax_section"></section>
-	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
+	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/templars_order.jpg"></section>
 	<section class="white parallax_section"></section>
 	<section class="parallax-window parallax_section" data-parallax="scroll" data-image-src="img/teutons_order.jpg"></section>
 	<section class="white parallax_section"></section>
