--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	     <a class="dropdown-item dropdown_item_main" href="#">Известные крестоносцы</a>
 	     <a class="dropdown-item dropdown_item_main" href="#">Вооружение и защита</a>
 	     <div id="main_dropdown_divider" class="dropdown-divider"></div>
-	     <a class="dropdown-item dropdown_item_main" href="#">Предложения по содержанию</a>
+	     <a class="dropdown-item dropdown_item_main"  href="#">Предложения по содержанию</a>
 	    </div>
 	   </li>
 	   <li class="nav-item">
@@ -116,7 +116,7 @@
 				<p>Есть интересные предложения по содержанию? Обнаружили ошибку или неточность? - пришлите мне сообщение:</p>
 			</div>
 			<div class="col-12 col-md-8 ml-auto mr-auto">
-				<input class="form-control input_text_field" type="text" id="suggest_materials">
+				<textarea class="form-control input_text_field" type="text" id="suggest_materials" placeholder="Есть предлоежние по содержанию?"></textarea>
 			</div>
 			<div class="col-12 col-md-8 ml-auto mr-auto footer_speach">
 				<button class="accept_button" onclick="income_materials()">Отправить предложение</button>
